--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "d3": "5.7.0",
     "date-fns": "1.30.1",
     "hammerjs": "2.0.8",
-    "lodash": "4.17.11",
+    "lodash": "^4.17.14",
     "moment": "2.23.0",
     "ng2-charts": "1.6.0",
     "ngrx-store-freeze": "0.2.4",
@@ -82,7 +82,7 @@
     "karma-coverage-istanbul-reporter": "2.0.4",
     "karma-jasmine": "1.1.2",
     "karma-jasmine-html-reporter": "0.2.2",
-    "node-sass": "4.12.0",
+    "node-sass": "^4.12.0",
     "protractor": "5.4.2",
     "ts-node": "7.0.1",
     "tslib": "1.9.3",
