--- a/package.json
+++ b/package.json
@@ -45,7 +45,6 @@
     "@types/prismjs": "1.9.0",
     "angular-calendar": "0.26.4",
     "angular-in-memory-web-api": "0.8.0",
-    "chart.js": "^2.7.3",
     "classlist.js": "1.1.20150312",
     "core-js": "2.6.2",
     "d3": "5.7.0",
@@ -53,7 +52,7 @@
     "hammerjs": "2.0.8",
     "lodash": "^4.17.14",
     "moment": "2.23.0",
-    "ng2-charts": "^1.6.0",
+    "net": "^1.0.2",
     "ngrx-store-freeze": "0.2.4",
     "ngx-color-picker": "7.3.0",
     "ngx-cookie-service": "2.1.0",
@@ -63,6 +62,8 @@
     "rxjs": "6.3.3",
     "rxjs-compat": "6.3.3",
     "screenfull": "^4.2.0",
+    "sockjs-client": "^1.4.0",
+    "stompjs": "^2.3.3",
     "web-animations-js": "2.3.1",
     "zone.js": "^0.8.28"
   },
@@ -76,8 +77,11 @@
     "@types/jasminewd2": "2.0.6",
     "@types/lodash": "4.14.119",
     "@types/node": "8.9.5",
+    "@types/sockjs-client": "^1.1.1",
+    "@types/stompjs": "^2.3.4",
     "codelyzer": "4.5.0",
     "firebase-tools": "^7.2.2",
+    "intl": "^1.2.5",
     "jasmine-core": "2.99.1",
     "jasmine-spec-reporter": "4.2.1",
     "karma": "4.0.1",
