--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/prismjs": "1.9.0",
     "angular-calendar": "0.26.4",
     "angular-in-memory-web-api": "0.8.0",
+    "chartist": "^0.11.4",
     "classlist.js": "1.1.20150312",
     "core-js": "2.6.2",
     "d3": "5.7.0",
