--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "SFEFRONT": {
+    "EPSFRONT": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/SFEFRONT",
+            "outputPath": "dist/EPSFRONT",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -57,18 +57,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "SFEFRONT:build"
+            "browserTarget": "EPSFRONT:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "SFEFRONT:build:production"
+              "browserTarget": "EPSFRONT:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "SFEFRONT:build"
+            "browserTarget": "EPSFRONT:build"
           }
         },
         "test": {
@@ -102,7 +102,7 @@
         }
       }
     },
-    "SFEFRONT-e2e": {
+    "EPSFRONT-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "prefix": "",
@@ -111,11 +111,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "SFEFRONT:serve"
+            "devServerTarget": "EPSFRONT:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "SFEFRONT:serve:production"
+              "devServerTarget": "EPSFRONT:serve:production"
             }
           }
         },
@@ -131,5 +131,5 @@
       }
     }
   },
-  "defaultProject": "SFEFRONT"
+  "defaultProject": "EPSFRONT"
 }
